# tangerine-backend

./: .dockerignore  .flaskenv  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.centos  Pipfile  README.md  app.py  build.sh  ci-build-args.txt  docker-compose-llama-cpp.yml  docker-compose.yml  entity.yaml  file_upload_cli.py  install_pre_commit.sh  main.py  pyproject.toml  pytest.ini  routes.py  s3-example.yaml  s3-knowledgebase-example.yaml  s3-sync-example-config.yaml  test.py
.github/workflows/: gh-actions.yml  pre-commit.yml
.tekton/: tangerine-backend-pull-request.yaml  tangerine-backend-push.yaml
connectors/: config.py
connectors/db/: agent.py  assistant.py  common.py  file.py  interactions.py  vector.py
connectors/llm/: interface.py
connectors/s3/: sync.py
connectors/vector_store/: db.py
experiments/: test.py
experiments/generated_docs/: 1.txt  4.txt
json/: quality_detection_training.json
migrations/versions/: 0cf0b3a342d6_add_user_to_interactions.py  (+24 more)
openshift/: backend-template.yaml  backend.template.yaml  ingress-template.yaml  pgvector.template.yaml  s3-credentials.secret.yaml  s3sync-cronjob.template.yaml  template.yaml  text-embeddings-inference.template.yaml
pgadmin/: pgadmin-servers.json  pgpassfile
resources/: agent.py  assistant.py  feedback.py  metrics.py  routes.py  utils.py
sql/: hybrid_search.sql
tests/: chatapi.py  test_assistant_conversation_history.py  test_chat_api.py  test_conversation_api.py  test_conversation_history.py  test_conversation_model.py  test_md_processing.py
utils/: processors.py
(+48 files in other folders)
