[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tangerine"
version = "0.0.1"
description = "A slim and light-weight RAG (Retieval Augmented Generated) system used to create and manage chat bot assistants."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.setuptools.package-data]
tangerine = ["sql/*", "data/*"]

[project.urls]
Homepage = "https://github.com/RedHatInsights/tangerine-backend"
Issues = "https://github.com/RedHatInsights/tangerine-backend/issues"

[tool.pytest.ini_options]
addopts = ["--ignore=data/"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"
exclude = ["data/*"]

[tool.flake8]
max-line-length = 100
exclude = "data/*"
